Add sheriff to deps.

--- a/rebar.config
+++ b/rebar.config
@@ -2,3 +2,12 @@
 
 {plugin_dir, "src/plugin"}.
 {plugins, [perforator_rebar_plugin]}.
+
+{erl_opts, [{parse_transform, sheriff}]}.
+
+
+{cover_enabled, true}.
+
+{deps, [
+    {sheriff, ".*", {git, "git://github.com/extend/sheriff", "342015e610"}}
+]}.
