Add verbose flag to eunit_opts in rebar.config.

--- a/rebar.config
+++ b/rebar.config
@@ -4,7 +4,7 @@
 {plugins, [perforator_rebar_plugin]}.
 
 {erl_opts, [{parse_transform, sheriff}]}.
-
+{eunit_opts, [verbose]}.
 
 {cover_enabled, true}.
 
