Change deps protocol

--- a/rebar.config
+++ b/rebar.config
@@ -9,5 +9,5 @@
 {cover_enabled, true}.
 
 {deps, [
-    {sheriff, ".*", {git, "git://github.com/extend/sheriff", "342015e610"}}
+    {sheriff, ".*", {git, "https://github.com/extend/sheriff", "342015e610"}}
 ]}.
