--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,7 @@
 {plugin_dir, "src/plugin"}.
 {plugins, [perforator_rebar_plugin]}.
 
-{erl_opts, [{parse_transform, sheriff}]}.
+{erl_opts, [{i, "include"}, {parse_transform, sheriff}]}.
 {eunit_opts, [verbose]}.
 
 {cover_enabled, true}.
